[package]
name = "dotree"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dotree"
path = "src/lib.rs"

[[bin]]
name = "dt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
console = "0.15.7"
ctrlc = "3.4.1"
dirs = "5.0.1"
exec = "0.3.1"
log = "0.4.20"
once_cell = "1.18.0"
pest = "2.7.4"
pest_derive = "2.7.4"
pretty_env_logger = "0.5.0"
rustyline = { version = "12.0.0", features = ["derive"] }

[dev-dependencies]
k9 = "0.11.6"
